--- a/lamp-php7/puppet/assets/apache-phpmyadmin.conf
+++ b/lamp-php7/puppet/assets/apache-phpmyadmin.conf
@@ -1,42 +1,20 @@
-# phpMyAdmin default Apache configuration
-
 Alias /phpmyadmin /home/vagrant/phpMyAdmin-4.6.3-all-languages
 
 <Directory /home/vagrant/phpMyAdmin-4.6.3-all-languages>
-	Options FollowSymLinks
-	DirectoryIndex index.php
-        Require all granted
-
-	<IfModule mod_php7.c>
-		AddType application/x-httpd-php .php
-
-		php_flag magic_quotes_gpc Off
-		php_flag track_vars On
-		php_flag register_globals Off
-		php_admin_flag allow_url_fopen Off
-		php_value include_path .
-		php_admin_value open_basedir /home/vagrant/phpMyAdmin-4.6.3-all-languages/:/home/vagrant/php/php-gettext/:/home/vagrant/javascript/
-	</IfModule>
-
+    Options FollowSymLinks
+    Require all granted
 </Directory>
 
-# Authorize for setup
+# Deny access to setup
 <Directory /home/vagrant/phpMyAdmin-4.6.3-all-languages/setup>
-    <IfModule mod_authn_file.c>
-        AuthType Basic
-        AuthName "phpMyAdmin Setup"
-        AuthUserFile /etc/phpMyAdmin-4.6.3-all-languages/htpasswd.setup
-    </IfModule>
-    Require valid-user
+    Require all denied
 </Directory>
 
 # Disallow web access to directories that don't need it
 <Directory /home/vagrant/phpMyAdmin-4.6.3-all-languages/libraries>
-    Order Deny,Allow
-    Deny from All
+    Require all denied
 </Directory>
 
 <Directory /home/vagrant/phpMyAdmin-4.6.3-all-languages/setup/lib>
-    Order Deny,Allow
-    Deny from All
+    Require all denied
 </Directory>
