--- a/ubuntu.16.04-lamp/puppet/assets/apache-phpmyadmin.conf
+++ b/ubuntu.16.04-lamp/puppet/assets/apache-phpmyadmin.conf
@@ -1,20 +1,20 @@
-Alias /phpmyadmin /home/vagrant/phpmyadmin
+Alias /phpmyadmin /home/ubuntu/phpmyadmin
 
-<Directory /home/vagrant/phpmyadmin>
+<Directory /home/ubuntu/phpmyadmin>
     Options FollowSymLinks
     Require all granted
 </Directory>
 
 # Deny access to setup
-<Directory /home/vagrant/phpmyadmin/setup>
+<Directory /home/ubuntu/phpmyadmin/setup>
     Require all denied
 </Directory>
 
 # Disallow web access to directories that don't need it
-<Directory /home/vagrant/phpmyadmin/libraries>
+<Directory /home/ubuntu/phpmyadmin/libraries>
     Require all denied
 </Directory>
 
-<Directory /home/vagrant/phpmyadmin/setup/lib>
+<Directory /home/ubuntu/phpmyadmin/setup/lib>
     Require all denied
 </Directory>
