PHP7 FPM config - recommendation from Digital Ocean

--- a/ubuntu.16.04.lemp/puppet/assets/php7-fpm.ini
+++ b/ubuntu.16.04.lemp/puppet/assets/php7-fpm.ini
@@ -759,6 +759,13 @@ enable_dl = Off
 ; http://php.net/cgi.fix-pathinfo
 ;cgi.fix_pathinfo=1
 
+; FROM https://www.digitalocean.com/community/tutorials/how-to-install-linux-nginx-mysql-php-lemp-stack-in-ubuntu-16-04
+; This is an extremely insecure setting because it tells PHP to attempt to 
+; execute the closest file it can find if the requested PHP file cannot be found. 
+; This basically would allow users to craft PHP requests in a way that would 
+; allow them to execute scripts that they shouldn't be allowed to execute.
+cgi.fix_pathinfo=0
+
 ; if cgi.discard_path is enabled, the PHP CGI binary can safely be placed outside
 ; of the web tree and people will not be able to circumvent .htaccess security.
 ; http://php.net/cgi.dicard-path
