--- a/ubuntu.16.04.lemp/puppet/assets/nginx-dev.conf
+++ b/ubuntu.16.04.lemp/puppet/assets/nginx-dev.conf
@@ -1,32 +1,33 @@
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
-        server_name _;
-	root /vagrant;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name _;
+    root /vagrant;
 
-	location / {
-		index index.html index.php;
-	}
+    location / {
+        # try to serve file directly, fallback to req-dump.php.php
+        try_files $uri /req-dump.php$is_args$args;
+    }
 
-	# pass the PHP scripts to FastCGI
-	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
+    # pass the PHP scripts to FastCGI
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
 
-                # A UNIX socket can be considered slightly faster as it does 
-                # not have a network protocol and thus skips the network stack, 
-                # but is limited to a single machine. TCP on the other hands 
-                # lets you connect to services running on different hosts.
+        # A UNIX socket can be considered slightly faster as it does 
+        # not have a network protocol and thus skips the network stack, 
+        # but is limited to a single machine. TCP on the other hands 
+        # lets you connect to services running on different hosts.
 
-		# With php7.0-cgi alone:
-		# fastcgi_pass 127.0.0.1:9000;
+        # With php7.0-cgi alone:
+        # fastcgi_pass 127.0.0.1:9000;
 
-		# With php7.0-fpm:
-		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
-	}
+        # With php7.0-fpm:
+        fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+    }
 
-	# deny access to .htaccess files, if Apache's document root
-	# concurs with nginx's one
-	location ~ /\.ht {
-		deny all;
-	}
+    # deny access to .htaccess files, if Apache's document root
+    # concurs with nginx's one
+    location ~ /\.ht {
+        deny all;
+    }
 }
