--- a/ubuntu.16.04.lemp/puppet/assets/nginx-dev.conf
+++ b/ubuntu.16.04.lemp/puppet/assets/nginx-dev.conf
@@ -30,4 +30,8 @@ server {
     location ~ /\.ht {
         deny all;
     }
+
+    location /phpmyadmin {
+        alias /home/ubuntu/phpmyadmin/;
+    }
 }
